No more caching in AudiothekUtils